--- a/platform/ui/src/components/measurementTable/QuestionRound/Stepper.css
+++ b/platform/ui/src/components/measurementTable/QuestionRound/Stepper.css
@@ -15,21 +15,22 @@
   text-align: center;
 }
 
-.radio-toolbar.density label, .radio-toolbar.quality label {
-display: inline-block;
-background-color: #fff;
-padding: 7px 11px;
-font-family: Arial;
-font-size: 16px;
-cursor: pointer;
-width: 42%;
-margin: 7px 10px;
-border-radius: 10px;
-text-align: center;
+.radio-toolbar.density label,
+.radio-toolbar.quality label {
+  display: inline-block;
+  background-color: #fff;
+  padding: 7px 11px;
+  font-family: Arial;
+  font-size: 16px;
+  cursor: pointer;
+  width: 42%;
+  margin: 7px 10px;
+  border-radius: 10px;
+  text-align: center;
 }
 
-
-.radio-toolbar.density label:hover, .radio-toolbar.quality label:hover {
+.radio-toolbar.density label:hover,
+.radio-toolbar.quality label:hover {
   display: inline-block;
   background-color: #333;
   color: #fff;
@@ -41,7 +42,7 @@ text-align: center;
   margin: 7px 10px;
   border-radius: 10px;
   text-align: center;
-  }
+}
 
 .radio-toolbar label:hover {
   display: block;
@@ -66,6 +67,20 @@ p {
   text-align: center;
   font-size: 18px;
 }
-h2{
+h2 {
   text-align: center;
+}
+.finding-list{
+  padding:0
+}
+.finding-list li {
+  list-style: none;
+  background: #333;
+  color: #fff;
+  width: 80%;
+  margin: 8px auto;
+  text-align: center;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 10px;
 }
